# substitute_analysis

./: Cargo.toml  README.md  cargo  freq_data.txt  medium.txt  medium_encrypted.txt  test.txt  totc_encrypted.txt
src/: freq_analysis.rs  load_data.rs  main.rs  sub_cipher.rs  todo.txt
