[package]
name = "substitute_analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.5.3", features = ["rayon"] }
itertools = "0.12.1"
rand = "0.8.5"
rayon = "1.10.0"
whichlang = "0.1.0"
